<resources>
    <string name="app_name">Fortnote</string>
    <string name="todo">Create new note</string>
    <string name="back">Back</string>
    <string name="note_title">Note Title</string>
    <string name="write_your_note_here">Write your note here...</string>
    <string name="b">B</string>
    <string name="i">I</string>
    <string name="u">U</string>
    <string name="redo">Redo</string>
    <string name="undo" />
    <string name="save_note">Save note</string>
    <string name="sort_by" />
</resources>
